--- a/views/blinkyCircuit.pug
+++ b/views/blinkyCircuit.pug
@@ -8,13 +8,13 @@ block content
     p
       ul
         li
-          a(href='#requirements').text-warning Requirements
+          a.jumbotron-link(href='#requirements') Requirements
         li
-          a(href='#parts').text-warning Parts List
+          a.jumbotron-link(href='#parts') Parts List
         li
-          a(href='#construction').text-warning Constructing the Circuit
+          a.jumbotron-link(href='#construction') Constructing the Circuit
         li
-          a(href='#firmata').text-warning Installing Firmata on the Arduino Uno
+          a.jumbotron-link(href='#firmata') Installing Firmata on the Arduino Uno
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
