--- a/views/dma.pug
+++ b/views/dma.pug
@@ -9,21 +9,22 @@ block content
     p
       ul
         li
-          a(href='#installnodered') Installing Node-Red on a Raspberry-Pi
+          a.jumbotron-link(href='#installnodered') Installing Node-Red on a Raspberry-Pi
         li
-          a(href='#runningnodered') Running Node-Red on a Raspberry-Pi
+          a.jumbotron-link(href='#runningnodered') Running Node-Red on a Raspberry-Pi
         li
-          a(href='#addingFlows') Adding Flows To Node-RED
+          a.jumbotron-link(href='#addingFlows') Adding Flows To Node-RED
         li
-          a(href='#specifyingMqtt') Specifying the MQTT Broker
+          a.jumbotron-link(href='#specifyingMqtt') Specifying the MQTT Broker
         li
-          a(href='#investigatingNodes') Investigating Node-RED Nodes 
+          a.jumbotron-link(href='#investigatingNodes') Investigating Node-RED Nodes 
         li
-          a(href='#bootstart') Starting the DMA on boot
+          a.jumbotron-link(href='#bootstart') Starting the DMA on boot
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='installnodered') Starting Node-Red on a Raspberry-Pi 
+        a(NAME='installnodered') Starting Node-Red on a Raspberry-Pi
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -105,7 +106,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='runningnodered') Running Node-Red on a Raspberry-Pi 
+        a(NAME='runningnodered') Running Node-Red on a Raspberry-Pi
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -157,7 +159,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='addingFlows') Adding Flows To Node-RED 
+        a(NAME='addingFlows') Adding Flows To Node-RED
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -204,7 +207,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='specifyingMqtt') Specifying the MQTT Broker 
+        a(NAME='specifyingMqtt') Specifying the MQTT Broker
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -241,7 +245,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='investigatingNodes') Investigating Node-RED Nodes 
+        a(NAME='investigatingNodes') Investigating Node-RED Nodes
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -284,7 +289,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='bootstart') Starting the DMA on boot 
+        a(NAME='bootstart') Starting the DMA on boot
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
