--- a/views/gui.pug
+++ b/views/gui.pug
@@ -9,23 +9,24 @@ block content
     p
       ul
         li
-          a(href='#installnodered') Installing Node-RED
+          a.jumbotron-link(href='#installnodered') Installing Node-RED
         li
-          a(href='#runningnodered') Running Node-Red on a Raspberry-Pi
+          a.jumbotron-link(href='#runningnodered') Running Node-Red on a Raspberry-Pi
         li
-          a(href='#addingFlows') Adding Flows To Node-RED
+          a.jumbotron-link(href='#addingFlows') Adding Flows To Node-RED
         li
-          a(href='#specifyingMqtt') Specifying the MQTT Broker
+          a.jumbotron-link(href='#specifyingMqtt') Specifying the MQTT Broker
         li
-          a(href='#dashboard') Using Node-RED Dashboard Components
+          a.jumbotron-link(href='#dashboard') Using Node-RED Dashboard Components
         li
-          a(href='#bootstart') Starting the UI on boot
+          a.jumbotron-link(href='#bootstart') Starting the UI on boot
         li
-          a(href='#wrapup') Wrap-Up 
+          a.jumbotron-link(href='#wrapup') Wrap-Up 
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='installnodered') Installing Node-RED 
+        a(NAME='installnodered') Installing Node-RED
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -129,7 +130,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='runningnodered') Running Node-Red on a Raspberry-Pi 
+        a(NAME='runningnodered') Running Node-Red on a Raspberry-Pi
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -166,7 +168,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='addingFlows') Adding Flows To Node-RED 
+        a(NAME='addingFlows') Adding Flows To Node-RED
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -210,7 +213,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='specifyingMqtt') Specifying the MQTT Broker 
+        a(NAME='specifyingMqtt') Specifying the MQTT Broker
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -246,7 +250,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='dashboard') Using Node-RED Dashboard Components 
+        a(NAME='dashboard') Using Node-RED Dashboard Components
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -311,7 +316,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='bootstart') Starting the UI on boot 
+        a(NAME='bootstart') Starting the UI on boot
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
@@ -362,7 +368,8 @@ block content
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
-        a(NAME='wrapup') Wrap-Up 
+        a(NAME='wrapup') Wrap-Up
+        br 
         span(style='font-size: small;')
           a(href='#contents') Table of contents
       .card-body.card1-body
