--- a/views/setupRPi.pug
+++ b/views/setupRPi.pug
@@ -10,15 +10,15 @@ block content
     p
       ul
         li
-          a(href='#diskImage') Setting up the Disk Image
+          a.jumbotron-link(href='#diskImage') Setting up the Disk Image
         li
-          a(href='#connecting') Connecting to the Raspberry-Pi
+          a.jumbotron-link(href='#connecting') Connecting to the Raspberry-Pi
         li
-          a(href='#node') Setting up node.js and npm
+          a.jumbotron-link(href='#node') Setting up node.js and npm
         li 
-          a(href='#arduino') Installing a Arduino Programing Environment
+          a.jumbotron-link(href='#arduino') Installing a Arduino Programing Environment
         li 
-          a(href='#mqtt') Installing an MQTT Broker
+          a.jumbotron-link(href='#mqtt') Installing an MQTT Broker
   .container.bot-pad
     .card.card1
       h5.card-title.card1-title 
