--- a/views/tutorial.pug
+++ b/views/tutorial.pug
@@ -10,6 +10,7 @@ block content
     .row
       .col-md.bot-pad
         .card.card1
+          p.card-title.card1-title Step 1
           img(src='img/tutorial/RPi-Logo.png', height='180px')
           p.card-title.card1-title Setting Up a Raspberry-Pi for Blinky-Lite
           .card-body.card1-body
@@ -20,6 +21,7 @@ block content
             a.btn.card-button.card1-button(href='/tutorial/setupRPi') Read More
       .col-md.bot-pad
         .card.card1
+          p.card-title.card1-title Step 2
           img(src='img/tutorial/blinky-breadboard.png', height='180px')
           p.card-title.card1-title Constructing a Blinky-Lite Circuit
           .card-body.card1-body
@@ -29,6 +31,7 @@ block content
     .row
       .col-md.bot-pad
         .card.card1
+          p.card-title.card1-title Step 3
           img(src='img/tutorial/dmaRedFlowCrop.png', height='180px')
           p.card-title.card1-title Building a Device Message Adapter (DMA)
           .card-body.card1-body
@@ -38,6 +41,7 @@ block content
             a.btn.card-button.card1-button(href='/tutorial/dma') Read More
       .col-md.bot-pad
         .card.card1
+          p.card-title.card1-title Step 4
           img(src='img/tutorial/gui.png', height='180px')
           p.card-title.card1-title Building a User Interface
           .card-body.card1-body
