--- a/views/menubar.pug
+++ b/views/menubar.pug
@@ -1,6 +1,6 @@
 nav.navbar.navbar-expand-lg.navbar-light
   a.navbar-brand(href='/',data-toggle="tooltip",data-placement="bottom",title="Home")
-    img(src="/img/BlinkyLogo-Text.png" ,height="50px")
+    img(src="/img/BlinkyLogo.gif" ,height="50px")
   #navbarNavDropdown.navbar-expand
     ul.navbar-nav
       li.nav-item.active
