--- a/views/index.pug
+++ b/views/index.pug
@@ -10,7 +10,7 @@ block content
     p.lead.
       Blinky-Lite takes it out of the hands of the experts and gives controls back to you.
     p.lead.
-      Blinky-Lite is an open source platform based on open source technology. It is not for sale. It is free.
+      Blinky-Lite is an open source platform based on open source technology. It is free.
     a.btn.jumbotron-button(href='/readmore') Read More
   div.container.marketing
     div.row.featurette
